--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -20,6 +20,7 @@
     "@shopify/app-bridge-react": "^3.1.0",
     "@shopify/app-bridge-utils": "^3.1.0",
     "@shopify/polaris": "^10.42.0",
+    "@shopify/react-form": "^2.5.5",
     "@shopify/stylelint-polaris": "^9.0.2",
     "@vitejs/plugin-react": "1.2.0",
     "react": "^17.0.2",
